# google-mcp

./: .env.example  .gitignore  Cargo.toml  README.md
crates/gdrive-mcp-core/: Cargo.toml
crates/gdrive-mcp-core/src/: auth.rs  client.rs  config.rs  convert.rs  error.rs  lib.rs  oauth.rs  server.rs  transport.rs
crates/gdrive-mcp-core/src/prompts/: mod.rs  organize_files.rs  search_help.rs  sharing_guide.rs
crates/gdrive-mcp-core/src/resources/: file_resource.rs  folder_resource.rs  mod.rs
crates/gdrive-mcp-core/src/tools/: about.rs  changes.rs  comments.rs  drives.rs  files.rs  labels.rs  mod.rs  permissions.rs  replies.rs  revisions.rs
crates/gdrive-mcp-server/: Cargo.toml
crates/gdrive-mcp-server/src/: main.rs
