[package]
name = "gdrive-mcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Google Drive MCP server - comprehensive access to Google Drive via Model Context Protocol"
keywords = ["mcp", "google-drive", "model-context-protocol", "ai", "claude"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "gdrive-mcp-server"
path = "src/main.rs"

[dependencies]
gdrive-mcp-core = { path = "../gdrive-mcp-core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rustls = { version = "0.23.36", features = ["ring"] }
